--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body{
-    background-color: rgb(127, 200, 255);
+    background-color: rgb(255, 146, 127);
 }
 
 h1{
     background-color: purple;
+    color: white;
 }
